# kmeans

./: CMakeLists.txt  Makefile  README.md  centroids.h  kmeans.cu  kmeans.h  labels.h  test.cu
